--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@progress/kendo-data-query": "^1.7.0",
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-react-animation": "^7.2.3",
+    "@progress/kendo-react-buttons": "^7.2.3",
+    "@progress/kendo-react-data-tools": "^7.2.3",
+    "@progress/kendo-react-dateinputs": "^7.2.3",
+    "@progress/kendo-react-dropdowns": "^7.2.3",
+    "@progress/kendo-react-grid": "^7.2.3",
+    "@progress/kendo-react-inputs": "^7.2.3",
+    "@progress/kendo-react-intl": "^7.2.3",
+    "@progress/kendo-react-popup": "^7.2.3",
+    "@progress/kendo-react-treeview": "^7.2.3",
+    "@progress/kendo-svg-icons": "^2.1.0",
+    "@progress/kendo-theme-default": "^7.2.0",
+    "dotenv": "^16.4.5",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
