--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "@progress/kendo-data-query": "^1.7.0",
     "@progress/kendo-drawing": "^1.19.0",
     "@progress/kendo-licensing": "^1.3.5",
@@ -24,12 +28,17 @@
     "@progress/kendo-react-treeview": "^7.2.3",
     "@progress/kendo-svg-icons": "^2.1.0",
     "@progress/kendo-theme-default": "^7.2.0",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
+    "@types/node": "20.11.24",
     "eslint": "^8",
     "eslint-config-next": "14.1.1"
   }
