--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "20.11.24",
