--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,13 +30,15 @@
     "@progress/kendo-theme-default": "^7.2.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.5",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.22.2",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "20.11.24",
